--- a/trunk/doc/informe.lyx
+++ b/trunk/doc/informe.lyx
@@ -471,7 +471,7 @@ Comentarios del corrector:
 
 \begin_layout Standard
 \begin_inset ERT
-status collapsed
+status open
 
 \begin_layout Standard
 
@@ -493,7 +493,7 @@ thispagestyle{empty}
 
 \begin_layout Standard
 \begin_inset ERT
-status collapsed
+status open
 
 \begin_layout Standard
 
@@ -509,7 +509,7 @@ setcounter{page}{1}
 
 \begin_layout Standard
 \begin_inset ERT
-status collapsed
+status open
 
 \begin_layout Standard
 
@@ -535,7 +535,7 @@ pagenumbering{roman}
 
 \begin_layout Standard
 \begin_inset ERT
-status collapsed
+status open
 
 \begin_layout Standard
 
@@ -551,7 +551,7 @@ setcounter{page}{1}
 
 \begin_layout Standard
 \begin_inset ERT
-status collapsed
+status open
 
 \begin_layout Standard
 
@@ -575,41 +575,13 @@ Introducción a Minibase
 
 \end_layout
 
-\begin_layout Section
-BufferManager-Heap
-\end_layout
-
-\begin_layout Subsection
-Descripción general
-\end_layout
-
-\begin_layout Subsection
-Clases principales y sus protocolos principales
-\end_layout
-
-\begin_layout Subsection
-Interacción con otros componentes
-\end_layout
-
-\begin_layout Subsection
-Ejemplo de uso
-\end_layout
-
 \begin_layout Standard
-Si se justifica
-\end_layout
+\begin_inset Include \input{bufmgr.lyx}
+preview false
 
-\begin_layout Subsubsection
-Diagramas de secuencia
-\end_layout
+\end_inset
 
-\begin_layout Subsubsection
-Script de ejemplo
-\end_layout
 
-\begin_layout Subsection
-Evaluación del componente (opinión acerca de la calidad de código, diseño,
- etc.)
 \end_layout
 
 \begin_layout Standard
@@ -618,41 +590,13 @@ Evaluación del componente (opinión acerca de la calidad de código, diseño,
 
 \end_layout
 
-\begin_layout Section
-DiskManager
-\end_layout
-
-\begin_layout Subsection
-Descripción general
-\end_layout
-
-\begin_layout Subsection
-Clases principales y sus protocolos principales
-\end_layout
-
-\begin_layout Subsection
-Interacción con otros componentes
-\end_layout
-
-\begin_layout Subsection
-Ejemplo de uso
-\end_layout
-
 \begin_layout Standard
-Si se justifica
-\end_layout
+\begin_inset Include \input{diskmgr.lyx}
+preview false
 
-\begin_layout Subsubsection
-Diagramas de secuencia
-\end_layout
+\end_inset
 
-\begin_layout Subsubsection
-Script de ejemplo
-\end_layout
 
-\begin_layout Subsection
-Evaluación del componente (opinión acerca de la calidad de código, diseño,
- etc.)
 \end_layout
 
 \begin_layout Standard
@@ -661,45 +605,13 @@ Evaluación del componente (opinión acerca de la calidad de código, diseño,
 
 \end_layout
 
-\begin_layout Section
-Catalog
-\end_layout
-
-\begin_layout Subsection
-Descripción general
-\end_layout
-
-\begin_layout Subsection
-DER
-\end_layout
-
-\begin_layout Subsection
-Clases principales y sus protocolos principales
-\end_layout
-
-\begin_layout Subsection
-Interacción con otros componentes
-\end_layout
-
-\begin_layout Subsection
-Ejemplo de uso
-\end_layout
-
 \begin_layout Standard
-Si se justifica
-\end_layout
+\begin_inset Include \input{heapfile.lyx}
+preview false
 
-\begin_layout Subsubsection
-Diagramas de secuencia
-\end_layout
+\end_inset
 
-\begin_layout Subsubsection
-Script de ejemplo
-\end_layout
 
-\begin_layout Subsection
-Evaluación del componente (opinión acerca de la calidad de código, diseño,
- etc.)
 \end_layout
 
 \begin_layout Standard
@@ -708,168 +620,13 @@ Evaluación del componente (opinión acerca de la calidad de código, diseño,
 
 \end_layout
 
-\begin_layout Section
-Iterator
-\end_layout
-
 \begin_layout Standard
-TODO: Revisar los arboles binarios como estan construido y hacer un analisis
- mas profundo
-\end_layout
+\begin_inset Include \input{catalog.lyx}
+preview false
 
-\begin_layout Standard
-TODO: Realizar una descripcion mas profunda de cada clase
-\end_layout
+\end_inset
 
-\begin_layout Standard
-TODO: Mencionar las clases de excepciones que estan desperdigadas por ahi
-\end_layout
 
-\begin_layout Standard
-TODO: Revisar con mas detenimiento las clases IoBuf y OBuf, q parecen un
- poco al pedo
-\end_layout
-
-\begin_layout Standard
-TODO: Analizar mas profundamente las clases de eval y projection, y en la
- parte de uso explicar como se introduce una condicion
-\end_layout
-
-\begin_layout Subsection
-Descripción general
-\end_layout
-
-\begin_layout Standard
-La componente iterator es el punto de acceso a las tablas y a sus registros.
- Como tal ofrece, tambien, las operaciones basicas sobre tablas, como join,
- proyeccion y seleccion.
- La iterfaz usada, como dice el nombre, es la de un iterador, el cual se
- inicializa en base a otros iteradores o heapfiles y despues se va accediendo
- elemento por elemento en un orden definido por el iterador.
-\end_layout
-
-\begin_layout Subsection
-Clases principales y sus protocolos principales
-\end_layout
-
-\begin_layout Standard
-Como dice el nombre de la componente, la interfaz que ofrece es la de un
- iterador.
- Esta interfaz es implementada usando una clase abstracta de la cual heredan
- todas las clases que ofrecen acceso a un conjunto de registros.
-\end_layout
-
-\begin_layout Subsubsection
-FileScan
-\end_layout
-
-\begin_layout Standard
-FileScan permite iterar sobre los registros de un heapfile que cumplen una
- condicion de seleccion.
- Esta condicion puede ser nula, permitiendo iterar sobre todos los registros
- del heapfile.
- Tambien se puede especificar los atributos de las tuplas de salidas, permitiend
-o hacer una proyeccion.
-\end_layout
-
-\begin_layout Standard
-La evaluación de la condicion de seleccion y la proyeccion son proveidas
- por las clases PredEval y Projection, respectivamente.
-\end_layout
-
-\begin_layout Subsubsection
-NestedLoopsJoins
-\end_layout
-
-\begin_layout Standard
-NestedLoopsJoins permite realizar un join entre un iterador y un heapfile.
- El algoritmo utilizado es el más simple de los implementados, es un doble
- loop donde, en el cuerpo del loop interno, se verfican la condicion de
- join.
- Tambien se puede realizar una proyeccion en la salida.
-\end_layout
-
-\begin_layout Subsubsection
-SortMerge
-\end_layout
-
-\begin_layout Standard
-SortMerge realiza un join utilizando el algoritmo de merge sort.
- Como NestedLoopsJoins permite realizar una proyeccion en la salida.
-\end_layout
-
-\begin_layout Standard
-Para realizar el sort utiliza varias clases auxiliares, como Sort (que se
- encarga de iterar de una manera ordenada un heapfile) y IoBuf (que permite
- almacenar en memoria paginas).
-\end_layout
-
-\begin_layout Standard
-Esta implementacion no elimina los registros duplicados.
-\end_layout
-
-\begin_layout Subsubsection
-Sort
-\end_layout
-
-\begin_layout Standard
-Sort permite iterar de una manera ordenada la salida de otro iterador.
- Utiliza un arbol binario ordenado para establecer el orden de la salida.
-\end_layout
-
-\begin_layout Subsection
-Interacción con otros componentes
-\end_layout
-
-\begin_layout Standard
-Esta clase es el punto de acceso principal a los registros.
- En general con esta clase es con la cual se realiza toda interaccion con
- la base de datos (salvo la modificacion de las tablas o de los registros).
- 
-\end_layout
-
-\begin_layout Standard
-Respecto a la utilizacion de las otras componentes, Iterator se limita a
- utilizar heapfile para la interaccion con las tablas.
-\end_layout
-
-\begin_layout Subsection
-Ejemplo de uso
-\end_layout
-
-\begin_layout Standard
-TODO: algun ejemplo de uso q muestre claramente los detalles
-\end_layout
-
-\begin_layout Subsubsection
-Diagramas de secuencia
-\end_layout
-
-\begin_layout Standard
-No se justifica
-\end_layout
-
-\begin_layout Subsubsection
-Script de ejemplo
-\end_layout
-
-\begin_layout Standard
-?
-\end_layout
-
-\begin_layout Subsection
-Evaluación del componente
-\end_layout
-
-\begin_layout Standard
-Iterator ofrece una interfaz poco practica para el uso frecuente.
- Mucha funcionalidad esta repetida, como la proyeccion, que simplemente
- se podria implementar como otro iterador.
- Tambien resulta incomoda la construccion de un iterador por la cantidad
- de estructuras de datos que hay que generar.
- Igualmente esto se debe a pobre diseño de las clases y su modularización
- a favor de un estilo que se encuentra, por lo general, en programas escritos
- en C.
 \end_layout
 
 \begin_layout Standard
@@ -878,41 +635,13 @@ Iterator ofrece una interfaz poco practica para el uso frecuente.
 
 \end_layout
 
-\begin_layout Section
-Index-BTree
-\end_layout
-
-\begin_layout Subsection
-Descripción general
-\end_layout
-
-\begin_layout Subsection
-Clases principales y sus protocolos principales
-\end_layout
-
-\begin_layout Subsection
-Interacción con otros componentes
-\end_layout
-
-\begin_layout Subsection
-Ejemplo de uso
-\end_layout
-
 \begin_layout Standard
-Si se justifica
-\end_layout
+\begin_inset Include \input{iterator.lyx}
+preview false
 
-\begin_layout Subsubsection
-Diagramas de secuencia
-\end_layout
+\end_inset
 
-\begin_layout Subsubsection
-Script de ejemplo
-\end_layout
 
-\begin_layout Subsection
-Evaluación del componente (opinión acerca de la calidad de código, diseño,
- etc.)
 \end_layout
 
 \begin_layout Standard
@@ -921,41 +650,13 @@ Evaluación del componente (opinión acerca de la calidad de código, diseño,
 
 \end_layout
 
-\begin_layout Section
-Optimizer (no existente!)
-\end_layout
-
-\begin_layout Subsection
-Descripción general
-\end_layout
-
-\begin_layout Subsection
-Clases principales y sus protocolos principales
-\end_layout
-
-\begin_layout Subsection
-Interacción con otros componentes
-\end_layout
-
-\begin_layout Subsection
-Ejemplo de uso
-\end_layout
-
 \begin_layout Standard
-Si se justifica
-\end_layout
+\begin_inset Include \input{index.lyx}
+preview false
 
-\begin_layout Subsubsection
-Diagramas de secuencia
-\end_layout
+\end_inset
 
-\begin_layout Subsubsection
-Script de ejemplo
-\end_layout
 
-\begin_layout Subsection
-Evaluación del componente (opinión acerca de la calidad de código, diseño,
- etc.)
 \end_layout
 
 \begin_layout Standard
